force-app/main/default/objects/ContactUsContact__c/ContactUsContact__c.object-meta.xml
<CustomObject>
    <description>This object holds all the ContactUsContact records based on the district/branch codes</description>
    <label>Contact Us Contact</label>
    <nameField>
        <label>Contact Us Contact Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Us Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>