force-app/main/default/objects/ContactUsContact__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>To store the category values</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Reserve Bank Services Support Center – FedLine&lt;sup&gt;®&lt;/sup&gt; Solutions</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Account Services</fullName>
            </value>
            <value>
                <fullName>Account Services Contacts</fullName>
            </value>
            <value>
                <fullName>Central Bank</fullName>
            </value>
            <value>
                <fullName>Discount Window</fullName>
            </value>
            <value>
                <fullName>FedCash&amp;reg; Services</fullName>
            </value>
            <value>
                <fullName>FedNow&amp;reg; Service</fullName>
            </value>
            <value>
                <fullName>Fedwire Funds and Fedwire Securities</fullName>
            </value>
            <value>
                <fullName>Local Federal Reserve Bank</fullName>
            </value>
            <value>
                <fullName>National Settlement Service</fullName>
            </value>
            <value>
                <fullName>Treasury Services</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
            <value>
                <fullName>FedACH&amp;reg; and Check Services Contacts</fullName>
            </value>
            <value>
                <fullName>Treasury Services Contacts</fullName>
            </value>
            <value>
                <fullName>FedACH and Check Services</fullName>
            </value>
            <value>
                <fullName>FedACH&amp;reg; and Check Services</fullName>
                <isActive>false</isActive>
                <label>FedACH and Check Services</label>
            </value>
            <value>
                <fullName>FedCash Services</fullName>
                <isActive>false</isActive>
                <label>FedCash Services</label>
            </value>
            <value>
                <fullName>FedNow Service</fullName>
                <isActive>false</isActive>
                <label>FedNow Service</label>
            </value>
            <value>
                <fullName>Fedwire&amp;reg; Funds and Fedwire Securities</fullName>
                <isActive>false</isActive>
                <label>Fedwire&amp;reg; Funds and Fedwire Securities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>