force-app/main/default/objects/ContactUsContact__c/fields/Clone_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Clone_Source_Id__c</fullName>
    <description>Contains the old original ContactUsContact record ID for the clone the clone record</description>
    <label>Clone Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>