force-app/main/default/objects/ContactUsContact__c/fields/Contact_Email_Label__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Label__c</fullName>
    <label>Contact Email Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>