force-app/main/default/objects/ContactUsContact__c/fields/Is_Secondary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Is_Secondary_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Secondary Indicator</label>
    <type>Checkbox</type>
</CustomField>