force-app/main/default/objects/ContactUsContact__c/fields/Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Mailbox__c</fullName>
    <label>Mailbox</label>
    <length>225</length>
    <type>Text</type>
</CustomField>