force-app/main/default/objects/ContactUsContact__c/fields/Phone_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_Text_3__c</fullName>
    <label>Phone Text 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>