force-app/main/default/objects/ContactUsContact__c/fields/Phone_Text__c.field-meta.xml
<CustomField>
    <fullName>Phone_Text__c</fullName>
    <label>Phone Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>