force-app/main/default/objects/ContactUsContact__c/fields/Phone_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_2__c</fullName>
    <label>Phone Type 2</label>
    <length>225</length>
    <type>Text</type>
</CustomField>