force-app/main/default/objects/ContactUsContact__c/fields/Primary_Contact_Email_Label__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email_Label__c</fullName>
    <label>Primary Contact Email Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>