force-app/main/default/objects/ContactUsContact__c/fields/Primary_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Fax__c</fullName>
    <label>Primary Contact Fax</label>
    <type>Phone</type>
</CustomField>