force-app/main/default/objects/ContactUsContact__c/fields/Return_completed_original_docs_to__c.field-meta.xml
<CustomField>
    <fullName>Return_completed_original_docs_to__c</fullName>
    <inlineHelpText>Return completed original document(s) to</inlineHelpText>
    <label>Return completed original document(s) to</label>
    <type>TextArea</type>
</CustomField>