force-app/main/default/objects/ContactUsContact__c/fields/Return_draft_doc_Email__c.field-meta.xml
<CustomField>
    <fullName>Return_draft_doc_Email__c</fullName>
    <label>Return draft doc Email</label>
    <type>Email</type>
</CustomField>