force-app/main/default/objects/ContactUsContact__c/fields/Return_draft_doc_Fax__c.field-meta.xml
<CustomField>
    <fullName>Return_draft_doc_Fax__c</fullName>
    <label>Return draft doc Fax</label>
    <type>Phone</type>
</CustomField>