force-app/main/default/objects/ContactUsContact__c/fields/Return_draft_docs_for_initial_review__c.field-meta.xml
<CustomField>
    <fullName>Return_draft_docs_for_initial_review__c</fullName>
    <inlineHelpText>Return draft document(s) for initial review:</inlineHelpText>
    <label>Return draft doc(s) for initial review</label>
    <type>TextArea</type>
</CustomField>