force-app/main/default/objects/ContactUsContact__c/fields/Secondary_Contact_Email_Label__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Email_Label__c</fullName>
    <label>Secondary Contact Email Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>