force-app/main/default/objects/ContactUsContact__c/fields/Secondary_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Fax__c</fullName>
    <label>Secondary Contact Fax</label>
    <type>Phone</type>
</CustomField>