force-app/main/default/objects/ContactUsContact__c/fields/Secondary_Contact_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Name_2__c</fullName>
    <label>Secondary Contact Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>