force-app/main/default/objects/ContactUsContact__c/fields/Secondary_Contact_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Phone_2__c</fullName>
    <label>Secondary Contact Phone 2</label>
    <type>Phone</type>
</CustomField>