force-app/main/default/objects/ContactUsContact__c/fields/Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Phone__c</fullName>
    <label>Secondary Contact Phone</label>
    <type>Phone</type>
</CustomField>