force-app/main/default/objects/ContactUsContact__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>SubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Confirmation Request</fullName>
            </value>
            <value>
                <fullName>Account Open Coordinators</fullName>
            </value>
            <value>
                <fullName>Account Services Customer Support</fullName>
            </value>
            <value>
                <fullName>Billing Operations Site and Service Charge Information</fullName>
            </value>
            <value>
                <fullName>Board Resolutions/Official Authorization List</fullName>
            </value>
            <value>
                <fullName>Canadian Check Processing</fullName>
            </value>
            <value>
                <fullName>Capital Stock</fullName>
            </value>
            <value>
                <fullName>FedACH and Check Services Customer Support</fullName>
            </value>
            <value>
                <fullName>FedLine&amp;reg; Services Technical Support</fullName>
            </value>
            <value>
                <fullName>FedLine Solutions Set-up</fullName>
            </value>
            <value>
                <fullName>Foreign Check Processing</fullName>
            </value>
            <value>
                <fullName>General Inquiries</fullName>
            </value>
            <value>
                <fullName>Image-enabled Savings Bonds Processing</fullName>
            </value>
            <value>
                <fullName>Mergers</fullName>
            </value>
            <value>
                <fullName>Paper Check Adjustments and Supporting Documentation Processing</fullName>
            </value>
            <value>
                <fullName>Paper Check Processing</fullName>
            </value>
            <value>
                <fullName>Discount Window</fullName>
            </value>
            <value>
                <fullName>Credit Risk Management</fullName>
            </value>
            <value>
                <fullName>Excess Balance Account</fullName>
            </value>
            <value>
                <fullName>Reporting Central</fullName>
            </value>
            <value>
                <fullName>Reserves Central</fullName>
            </value>
            <value>
                <fullName>Term Deposit Facility</fullName>
            </value>
            <value>
                <fullName>FedACH and Check Services</fullName>
            </value>
            <value>
                <fullName>FedACH and Check Services Set-up</fullName>
            </value>
            <value>
                <fullName>Fedwire Funds and Fedwire Securities</fullName>
            </value>
            <value>
                <fullName>Separately Sorted Savings Bonds Processing</fullName>
            </value>
            <value>
                <fullName>Customer Support for Image-enabled Savings Bonds (provided by Federal Reserve Bank Services Support Center)</fullName>
            </value>
            <value>
                <fullName>Savings Bond Customer Support Contacts</fullName>
            </value>
            <value>
                <fullName>TCMM Operations Support</fullName>
            </value>
            <value>
                <fullName>National Settlement Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>