force-app/main/default/objects/ContactUsContact__c/fields/Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Web_Site__c</fullName>
    <inlineHelpText>Central Bank Website&apos;s Link Services</inlineHelpText>
    <label>Web Site</label>
    <type>Url</type>
</CustomField>