force-app/main/default/objects/ContactUsContact__c/fields/Website_Label__c.field-meta.xml
<CustomField>
    <fullName>Website_Label__c</fullName>
    <inlineHelpText>Central Bank Website&apos;s Labels Services</inlineHelpText>
    <label>Website Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>