force-app/main/default/objects/ContactUsContact__c/recordTypes/District_Contact.recordType-meta.xml
<RecordType>
    <fullName>District_Contact</fullName>
    <active>true</active>
    <description>This record type is used for ContactUsContact records pagelayout</description>
    <label>District Contact</label>
</RecordType>