force-app/main/default/objects/ContactUsContact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Fax__c</columns>
    <columns>Phone__c</columns>
    <columns>Service_Setup_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Web_Site__c</columns>
    <columns>Address__c</columns>
    <columns>Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>