force-app/main/default/objects/ContactUsContact__c/listViews/Approver_Review_ContactUsContact.listView-meta.xml
<ListView>
    <fullName>Approver_Review_ContactUsContact</fullName>
    <filterScope>Queue</filterScope>
    <label>Approver Review</label>
    <queue>Approver_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>