force-app/main/default/objects/ContactUsContact__c/listViews/Central_Bank.listView-meta.xml
<ListView>
    <fullName>Central_Bank</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Web_Site__c</columns>
    <columns>Website_Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Central Bank</value>
    </filters>
    <label>Central Bank</label>
</ListView>