force-app/main/default/objects/ContactUsContact__c/listViews/Discount_Window.listView-meta.xml
<ListView>
    <fullName>Discount_Window</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Website_Label__c</columns>
    <columns>Web_Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Discount Window</value>
    </filters>
    <label>Discount Window</label>
</ListView>