force-app/main/default/objects/ContactUsContact__c/listViews/FedACH_and_Check_Services_Addresses.listView-meta.xml
<ListView>
    <fullName>FedACH_and_Check_Services_Addresses</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>FedCash&amp;reg; Services</value>
    </filters>
    <label>FedACH and Check Services Addresses</label>
</ListView>