force-app/main/default/objects/ContactUsContact__c/listViews/FedACH_and_Check_Services_Contacts.listView-meta.xml
<ListView>
    <fullName>FedACH_and_Check_Services_Contacts</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Contact_Email_Label__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>FedACH and Check Services Contacts</value>
    </filters>
    <label>FedACH and Check Services Contacts</label>
</ListView>