force-app/main/default/objects/ContactUsContact__c/listViews/FedNow.listView-meta.xml
<ListView>
    <fullName>FedNow</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Address__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>FedNow&amp;reg; Service</value>
    </filters>
    <label>FedNow</label>
</ListView>