force-app/main/default/objects/ContactUsContact__c/listViews/National_Settlement_Service.listView-meta.xml
<ListView>
    <fullName>National_Settlement_Service</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <filterScope>Mine</filterScope>
    <label>National Settlement Service</label>
</ListView>