force-app/main/default/objects/ContactUsContact__c/listViews/Treasury_Services_Address.listView-meta.xml
<ListView>
    <fullName>Treasury_Services_Address</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Treasury Services</value>
    </filters>
    <label>Treasury Services Address</label>
</ListView>