force-app/main/default/objects/ContactUsContact__c/listViews/Treasury_Services_Contacts.listView-meta.xml
<ListView>
    <fullName>Treasury_Services_Contacts</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Treasury Services Contacts</value>
    </filters>
    <label>Treasury Services Contacts</label>
</ListView>